--- a/views/index.html
+++ b/views/index.html
@@ -1,136 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>一封暖暖的邮件</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        width: 100vw;
-        width: 100%;
-      }
 
-      header {
-        width: 100%;
-        margin: 40px auto;
-        font-size: 20px;
-        color: #5f5e5e;
-        text-align: center;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>一封暖暖的邮件</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100vw;
+      width: 100%;
+    }
 
-      header .lastday {
-        font-size: 24px;
-        color: rgb(221, 73, 73);
-      }
+    header {
+      width: 100%;
+      margin: 40px auto;
+      font-size: 20px;
+      color: #5f5e5e;
+      text-align: center;
+    }
 
-      section {
-        width: 100%;
-        margin: 0 auto;
-        color: #5f5e5e;
-        text-align: center;
-      }
+    header .lastday {
+      font-size: 24px;
+      color: rgb(221, 73, 73);
+    }
 
-      section .weatherTip {
-        color: #676767;
-        font-size: 20px;
-        text-align: center;
-      }
+    section {
+      width: 100%;
+      margin: 0 auto;
+      color: #5f5e5e;
+      text-align: center;
+    }
 
-      section .forecast {
-        margin-top: 15px;
-        color: #676767;
-        font-size: 15px;
-        text-align: center;
-      }
+    section .weatherTip {
+      color: #676767;
+      font-size: 20px;
+      text-align: center;
+    }
 
-      section .threeDay {
-        display: -ms-grid;
-        display: grid;
-        grid-template-rows: 36px;
-        /* grid-template-columns: 15% 25% 25% 35%; */
-        grid-template-columns: repeat(4, minmax(0, 1fr));
-        place-items: center;
-      }
+    section .forecast {
+      margin-top: 15px;
+      color: #676767;
+      font-size: 15px;
+      text-align: center;
+    }
 
-      section .threeDay img {
-        width: 26px;
-        height: 26px;
-        vertical-align: bottom;
-      }
+    section .threeDay {
+      display: -ms-grid;
+      display: grid;
+      grid-template-rows: 36px;
+      /* grid-template-columns: 15% 25% 25% 35%; */
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+      place-items: center;
+    }
 
-      h5 {
-        margin-top: 50px;
-        color: #676767;
-        text-align: center;
-      }
+    section .threeDay img {
+      width: 26px;
+      height: 26px;
+      vertical-align: bottom;
+    }
 
-      footer {
-        display: -ms-grid;
-        display: grid;
-        place-items: center;
-        grid-row-gap: 10px;
-        margin: 20px 0;
-      }
+    h5 {
+      margin-top: 50px;
+      color: #676767;
+      text-align: center;
+    }
 
-      footer .today {
-        font-size: 22px;
-        color: #9d9d9d;
-      }
+    footer {
+      display: -ms-grid;
+      display: grid;
+      place-items: center;
+      grid-row-gap: 10px;
+      margin: 20px 0;
+    }
 
-      footer img {
-        width: 100%;
-      }
+    footer .today {
+      font-size: 22px;
+      color: #9d9d9d;
+    }
 
-      footer .imgType {
-        color: #b0b0b0;
-        font-size: 13px;
-      }
+    footer img {
+      width: 100%;
+    }
 
-      footer .text {
-        width: 85%;
-        color: #5f5e5e;
-      }
-    </style>
-  </head>
+    footer .imgType {
+      color: #b0b0b0;
+      font-size: 13px;
+    }
 
-  <body>
-    <header>
-      <span>今天是我们在一起的第</span>
-      <span class="lastday"> {{ lastDay }} </span>
-      <span>天</span>
-    </header>
-    <section>
-      <p class="weatherTip">{{ moji[0] }}</p>
-      <p class="forecast">近期天气预报</p>
-      {{each moji[1]}}
-      <div class="threeDay">
-        <span>{{ $value.day }}</span>
-        <div>
-          <img height="26" src="{{ $value.img }}" alt="天气" />
-          <span>{{ $value.text }}</span>
-        </div>
-        <span>{{ $value.temperature }}</span>
-        <div>
-          <span style="color: {{ pollutionLevel[$value.pollutionLevel] }}">{{
-            $value.pollution
-          }}</span>
-        </div>
+    footer .text {
+      width: 85%;
+      color: #5f5e5e;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <span>今天是我们在一起的第</span>
+    <span class="lastday"> {{ lastDay }} </span>
+    <span>天</span>
+  </header>
+  <section>
+    <p class="forecast">近期衢州天气预报</p>
+    <p class="weatherTip">{{ moji[0] }}</p>
+    {{each moji[1]}}
+    <div class="threeDay">
+      <span>{{ $value.day }}</span>
+      <div>
+        <img height="26" src="{{ $value.img }}" alt="天气" />
+        <span>{{ $value.text }}</span>
       </div>
-      {{/each}}
-    </section>
+      <span>{{ $value.temperature }}</span>
+      <div>
+        <span style="color: {{ pollutionLevel[$value.pollutionLevel] }}">{{
+          $value.pollution
+          }}</span>
+      </div>
+    </div>
+    {{/each}}
+  </section>
 
-    <h5>ONE · 一个</h5>
-    <footer>
-      <span class="today">{{ today }}</span>
-      <img src="{{ one.imgUrl }}" alt="one" />
-      <span class="imgType">{{ one.type }}</span>
-      <div class="text">{{ one.text }}</div>
-    </footer>
-  </body>
+  <section>
+    <p class="forecast">近期杭州天气预报</p>
+    <p class="weatherTip">{{ moji[2] }}</p>
+    {{each moji[3]}}
+    <div class="threeDay">
+      <span>{{ $value.day }}</span>
+      <div>
+        <img height="26" src="{{ $value.img }}" alt="天气" />
+        <span>{{ $value.text }}</span>
+      </div>
+      <span>{{ $value.temperature }}</span>
+      <div>
+        <span style="color: {{ pollutionLevel[$value.pollutionLevel] }}">{{
+          $value.pollution
+          }}</span>
+      </div>
+    </div>
+    {{/each}}
+  </section>
+
+  <h5>ONE · 一个</h5>
+  <footer>
+    <span class="today">{{ today }}</span>
+    <img src="{{ one.imgUrl }}" alt="one" />
+    <span class="imgType">{{ one.type }}</span>
+    <div class="text">{{ one.text }}</div>
+  </footer>
+</body>
+
 </html>
